# talkbox

./: README.md
src/: CMakeLists.txt  dictionary.cpp  dictionary.h  diphones.qrc  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sounds.qrc  speechengine.cpp  speechengine.h  wavamp.cpp  wavamp.h  wavcat.cpp  wavcat.h
